Ajuste de empilhamento

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <button id="start-button">Clique aqui para relembrar nosso 1° ano juntas 💖</button>
   </div>
 
-  <div id="counter" class="hidden"></div>
-  <div id="memory-text"></div>
-  <img id="memory-image" />
+  <div id="main-content" class="hidden">
+    <div id="counter" ></div>
+    <div id="memory-text"></div>
+    <img id="memory-image" />
+  </div>
+ 
 
   <div id="hearts-container"></div>
 
